test for source in lambda; extra (unneeded test) in TestConstructor